WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250424
Some UI-side scrolling tests fail because we fail to clear latched nodes
https://bugs.webkit.org/show_bug.cgi?id=250424
Summary
Some UI-side scrolling tests fail because we fail to clear latched nodes
Simon Fraser (smfr)
Reported
2023-01-10 16:24:36 PST
Some scrolling tests, like fast/scrolling/mac/async-scroll-overflow-hidden-on-one-axis.html, fail with UI-side compositing because we fail to clear scroll latching when `eventSender.monitorWheelEvents()` should do so.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-10 16:25:32 PST
<
rdar://problem/104099444
>
Simon Fraser (smfr)
Comment 2
2023-01-10 16:31:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8496
EWS
Comment 3
2023-01-10 22:42:09 PST
Committed
258771@main
(5ddd8c7440e8): <
https://commits.webkit.org/258771@main
> Reviewed commits have been landed. Closing PR #8496 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug