Some UI-side scrolling tests fail because we fail to clear latched nodes https://bugs.webkit.org/show_bug.cgi?id=250424 rdar://104099444

Reviewed by Tim Horton.

After 258549@main undid the attempt to have `monitorWheelEvents` change state directly in the UI process,
we lost the code that clears latched nodes on the ScrollingTreeLatchingController when a test calls
`eventSender.monitorWheelEvents()`.

So the `clearScrollLatching` argument to `startMonitoringWheelEvents()` needs to be plumbed through
to the UI process. The natural way to do this would be to treat it like other "tree-wide" state that
transits through the root ScrollingStateScrollingNode node, but that's problematic for data that is
imperative, rather than stateful; it's clearer to have imperative commands be state on a single
transaction, so have RemoteScrollingCoordinatorTransaction store this state. Maybe programmatic
scroll requests should be migrated to this model at some point.

* Source/WebCore/page/scrolling/ScrollingTree.h:
* Source/WebCore/page/scrolling/ThreadedScrollingCoordinator.cpp:
(WebCore::ThreadedScrollingCoordinator::startMonitoringWheelEvents):
* Source/WebKit/Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.cpp:
(WebKit::RemoteScrollingCoordinatorTransaction::encode const):
(WebKit::RemoteScrollingCoordinatorTransaction::decode):
(WebKit::RemoteScrollingCoordinatorTransaction::description const):
(WebKit::RemoteScrollingCoordinatorTransaction::dump const):
* Source/WebKit/Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.h:
(WebKit::RemoteScrollingCoordinatorTransaction::clearScrollLatching const):
(WebKit::RemoteScrollingCoordinatorTransaction::setClearScrollLatching):
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp:
(WebKit::RemoteScrollingCoordinatorProxy::commitScrollingTreeState):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.mm:
(WebKit::RemoteScrollingCoordinator::buildTransaction):
(WebKit::RemoteScrollingCoordinator::startMonitoringWheelEvents):

Canonical link: https://commits.webkit.org/258771@main